# CGproject

./: CMakeLists.txt  build方式.txt
output/: DIYmodel.txt
src/: CMakeLists.txt  bazierface.cpp  bezierface.h  diymodel.cpp  diymodel.h  environment.cpp  final_project.h  flower.cpp  flower.h  main.cpp
src/base/: CMakeLists.txt  bounding_box.h  camera.cpp  camera.h  fullscreen_quad.cpp  glad.c  light.h  model.cpp  model.h  skybox.cpp  texture.cpp  texture.h
